--- a/week-02.5-data-wrangling-part2/data-wrangling-part-2 .qmd
+++ b/week-02.5-data-wrangling-part2/data-wrangling-part-2 .qmd
@@ -12,11 +12,9 @@ Today we will aim to cover and mainly focus on:
 `select()`, `mutate()`,`group_by()`,`summarise()`,`count()`,
 `if_else()`, and `case_when()`
 
-
 If we have time / those who want can delve a bit deeper and look at
 
 `left_join()`, `pivot_wider()` and `pivot_longer()`
-
 
 We will answer the following questions using the **`nycflights13`**
 data-set.
@@ -34,11 +32,10 @@ It's not uncommon to get datasets with hundreds or even thousands of
 variables. In this case, the first challenge is often narrowing in on
 the variables you're actually interested in.
 
-
 `select()` allows you to rapidly zoom in on a useful subset using
 operations based on the names of the variables.
 
-```{r include= TRUE} 
+```{r include= TRUE}
 
 flights %>% select(carrier,origin)
 
@@ -57,21 +54,22 @@ That's the job of mutate().
 `mutate()` always adds new columns at the end of your dataset so we'll
 start by creating a narrower dataset so we can see the new variables.
 
-`mutate()` can be used with operations (*, +, etc) and is often used with `if_else()` or `case_when()`
+`mutate()` can be used with operations (\*, +, etc) and is often used
+with `if_else()` or `case_when()`
 
 `transmute()`
 
 `rename()`
 
-```{r include= TRUE} 
+```{r include= TRUE}
 
-flight_delay <- flights %>% mutate(total_delay = dep_delay + arr_delay)
+flight_delay <- flights %>% mutate(air_time_delay = arr_delay - dep_delay)
 
-flight_delay %>% mutate(refund = if_else(total_delay < -30, 1, 0))
+flight_delay %>% mutate(refund = if_else(arr_delay > 30, 1, 0))
 
-flight_delay %>% mutate(refund_groups = case_when (total_delay < -60 ~ 1,
-                                                   total_delay < -30 ~ 2,
-                                                   total_delay < 0 ~ 3,
+flight_delay %>% mutate(refund_groups = case_when (arr_delay > 60 ~ 1,
+                                                   arr_delay > 30 ~ 2,
+                                                   arr_delay > 0 ~ 3,
                                                    TRUE ~ 0 ,))
 
 flights %>% transmute(total_delay = dep_delay + arr_delay)
@@ -83,16 +81,16 @@ flights %>% rename(destination = dest)
 
 ```
 
-##  `group_by()` and `summarise()`
+## `group_by()` and `summarise()`
 
-`group_by()` is a very useful function that can be used for data aggregation.
+`group_by()` is a very useful function that can be used for data
+aggregation.
 
-It is often paired with `summarise()`,  and `mutate()`.
+It is often paired with `summarise()`, and `mutate()`.
 
 `count()` is like `group_by()` and `summarise()` in one.
 
 `ungroup()` to remove a grouping.
-
 
 ```{r}
 
@@ -109,18 +107,20 @@ flights %>% count(dest,carrier)
 
 ```
 
-
 ## `left-join()`
 
-There are a number of different joins see [R for Data Science: Relational data](https://r4ds.had.co.nz/relational-data.html?q=join#relational-data)
+There are a number of different joins see [R for Data Science:
+Relational
+data](https://r4ds.had.co.nz/relational-data.html?q=join#relational-data)
 
 I mainly use `left_join()`
 
-With `left_join()` You keep all variables in dataset `x` and though  
+With `left_join()` you keep all variables in dataset `x` and join on 
+those in though `y` that match to `x`.
 
 You can join on one or more columns.
 
-``` {r}
+```{r}
 
 flights %>%
   select(-origin, -dest) %>% 
@@ -133,5 +133,3 @@ flights %>%
 
 
 ```
-
-
