made changes to .rmd file and add the answers to Rscript

--- a/week-02.5-data-wrangling-part2/README.Rmd
+++ b/week-02.5-data-wrangling-part2/README.Rmd
@@ -32,8 +32,8 @@ Science](https://r4ds.had.co.nz/transform.html)
 
     Today we will aim cover and mainly focus on:
 
-    `select()`, `mutate()`,`group_by()`,`summarise()`,`count()`,
-    `if_else()`, and `case_when()`
+    `select()`,
+    `mutate()`,`group_by()`,`summarise()`,`count()`,`rename`if_else()`, and`case_when()\`
 
     If we have time / those who want can delve a bit deeper and look at
 
@@ -70,8 +70,7 @@ Science](https://r4ds.had.co.nz/transform.html)
 
     4.3 Long haul flight are defined as flights that took longer than
     seven hours. Create a flag for long haul flights. To answer this you
-    could use `if_else()`, several `mutate()` s or `case_when()` or
-    something else!
+    could use `if_else()`, `mutate()` , `case_when()` or something else!
 
     4.4 If you have finished these you can look at [R for Data
     Science](https://r4ds.had.co.nz/transform.html) 5.5.2 Exercises\
@@ -85,14 +84,14 @@ Science](https://r4ds.had.co.nz/transform.html)
     left_join and the dataset `airports`)*
 
     5.2 Use either `group_by` and `summarise()` or `count()` to see how
-    many flights where delayed?
+    many flights were delayed in departure?
 
     5.3 Use either `group_by` and `summarise()` or `count()` to see how
     many flights where long haul?
 
-    5.4 Add a new column to the dataset that says how many flights were
-    delayed for each airport? Which airport had the most delays in the
-    dataset?
+    5.4 Add a new column to the data set that says how many flights
+    departure was delayed for each airport? Which airport had the most
+    delays in departure the data-set?
 
     5.5 Which airline had the most flights depart from JFK? (Many ways
     to do this)
@@ -102,8 +101,9 @@ Science](https://r4ds.had.co.nz/transform.html)
 
 6.  **`left_join()`**
 
-    6.1 Create a table that shows how many delays each airline had the
-    least delays and make sure we have the full name for the airline.
+    6.1 Create a table that shows how many delays each airline had and
+    which had the least delays. Join data to make sure we have the full
+    name for the airline.
 
     6.2 Create a table that shows which airline had the most delays from
     an individual airport. We want the full name for both the airlines
