--- a/week-02.5-data-wrangling-part2/data-wrangling-part-2 .qmd
+++ b/week-02.5-data-wrangling-part2/data-wrangling-part-2 .qmd
@@ -1,15 +1,22 @@
 ---
 title: "Data wrangling part 2"
 author: "Samuel Pilling"
-format: revealjs
+format: 
+  revealjs:
+    smaller: true
+    scrollable: true
 editor: visual
+knitr: 
+  opts_chunk: 
+    echo: true
+    output-location: column-fragment
 ---
 
 ## Data wrangling part 2
 
 Today we will aim to cover and mainly focus on:
 
-`select()`, `mutate()`,`group_by()`,`summarise()`,`count()`,
+`select()`, `mutate()`,`group_by()`,`summarise()`,`count()`,`rename()`
 `if_else()`, and `case_when()`
 
 If we have time / those who want can delve a bit deeper and look at
@@ -26,7 +33,7 @@ library(nycflights13)
 
 ```
 
-## `select()`
+## `select()` {}
 
 It's not uncommon to get datasets with hundreds or even thousands of
 variables. In this case, the first challenge is often narrowing in on
@@ -35,47 +42,83 @@ the variables you're actually interested in.
 `select()` allows you to rapidly zoom in on a useful subset using
 operations based on the names of the variables.
 
-```{r include= TRUE}
+. . .
 
+```{r} 
 flights %>% select(carrier,origin)
-
-flights %>% select(origin,dest)
-
-flights %>% select(contains("time"))
-
-
+```
+. . .
+```{r }
+flights %>% select(contains("dep"))
 ```
 
-## `mutate()`
+## `mutate()` {.smaller}
 
 If you want to add new columns that are functions of existing columns.
-That's the job of mutate().
+That's the job of `mutate()`.
 
-`mutate()` always adds new columns at the end of your dataset so we'll
-start by creating a narrower dataset so we can see the new variables.
+`mutate()` always adds new columns at the end of your dataset.
 
 `mutate()` can be used with operations (\*, +, etc) and is often used
 with `if_else()` or `case_when()`
 
-`transmute()`
+`transmute()` - only keep the new mutated columns 
 
-`rename()`
+`rename()` - rename a column 
+
+. . .
+
+```{r }
+
+flight_delay <- flights %>%
+  mutate(air_time_delay = arr_delay - dep_delay) %>%
+  select(air_time_delay,everything())
+
+flight_delay
+```
+
+. . .
+
+```{r }
+
+flight_delay %>%
+  mutate(refund = if_else(arr_delay > 30, 1, 0)) %>%
+  select(refund,everything())
+```
+
+. . .
+
+```{r }
+
+flight_delay %>%
+  mutate(refund_groups = case_when (arr_delay > 60 ~ 1,
+                                                   arr_delay > 30 ~ 2,
+                                                   arr_delay > 0 ~ 3,
+                                                   TRUE ~ 0)) %>%
+  select(refund_groups, everything())
+
+```
+
+
+. . .
+
+```{r}
+
+
+flights %>%
+  transmute(air_time_delay = arr_delay - dep_delay)
+
+```
+
+
+. . .
 
 ```{r include= TRUE}
 
-flight_delay <- flights %>% mutate(air_time_delay = arr_delay - dep_delay)
 
-flight_delay %>% mutate(refund = if_else(arr_delay > 30, 1, 0))
-
-flight_delay %>% mutate(refund_groups = case_when (arr_delay > 60 ~ 1,
-                                                   arr_delay > 30 ~ 2,
-                                                   arr_delay > 0 ~ 3,
-                                                   TRUE ~ 0 ,))
-
-flights %>% transmute(total_delay = dep_delay + arr_delay)
-
-
-flights %>% rename(destination = dest)
+flights %>%
+  rename(destination = dest) %>%
+  select(destination, everything())
 
 
 
@@ -86,23 +129,60 @@ flights %>% rename(destination = dest)
 `group_by()` is a very useful function that can be used for data
 aggregation.
 
-It is often paired with `summarise()`, and `mutate()`.
+It is often paired with `summarise()` or `mutate()`.
 
 `count()` is like `group_by()` and `summarise()` in one.
 
 `ungroup()` to remove a grouping.
 
+. . .
+
 ```{r}
 
-flights %>% summarise(delay = mean(dep_delay, na.rm = TRUE))
+flights %>%
+  summarise(delay = mean(dep_delay, na.rm = TRUE))
 
-flights %>% group_by(dest) %>%  summarise(delay = mean(dep_delay, na.rm = TRUE))
+```
 
-flights %>% group_by(dest) %>%  summarise(delayed_flights = sum(if_else(dep_delay < 0,1,0), na.rm = T))
 
-flights %>% group_by(dest,carrier) %>% mutate(count = n())
+. . .
 
-flights %>% count(dest,carrier)
+```{r include= TRUE}
+
+flights %>%
+  group_by(dest) %>%
+  summarise(delay = mean(dep_delay, na.rm = TRUE))
+
+```
+
+. . .
+
+```{r}
+
+
+flights %>%
+  group_by(dest) %>%
+  summarise(delayed_flights = sum(if_else(dep_delay < 0,1,0), na.rm = T))
+
+```
+
+. . .
+
+```{r }
+
+flights %>%
+  group_by(dest,carrier) %>%
+  mutate(count_flights_dest = n()) %>%
+  select(count_flights_dest, everything())
+
+```
+
+. . .
+
+```{r }
+
+flights %>%
+  count(dest,carrier)
 
 
 ```
@@ -120,16 +200,20 @@ those in though `y` that match to `x`.
 
 You can join on one or more columns.
 
-```{r}
+. . .
 
+```{r}
 flights %>%
   select(-origin, -dest) %>% 
-  left_join(airlines, by = "carrier")
-
-
+  left_join(airlines, by = "carrier") %>%
+  select(name,everything())
+```
+. . .
+```{r }
 flights %>%
-  left_join(airports %>% select(faa,name), by = c("dest" = "faa")) %>%
-  rename(dest_airport = name)
-
+  left_join(airports %>% 
+              select(faa,name), by = c("dest" = "faa")) %>%
+  rename(dest_airport = name) %>%
+    select(dest_airport,everything())
 
 ```
